2024-04-17T08:20:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718627376 # 377
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: query file size: 24501
* notice: accum prev / next / diff: re vi: 0 272 / 0 273 / +0 +1

2024-04-16T12:31:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8705641318 # 372
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: query file size: 24473
* notice: accum prev / next / diff: re vi: 0 271 / 0 272 / +0 +1

2024-04-15T12:30:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8689101745 # 366
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: query file size: 24489
* notice: accum prev / next / diff: re vi: 0 270 / 0 271 / +0 +1

2024-04-15T03:30:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8682856746 # 363
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: query file size: 24485
* notice: accum prev / next / diff: re vi: 0 269 / 0 270 / +0 +1

2024-04-14T22:27:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681331810 # 362
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: query file size: 24485
* notice: accum prev / next / diff: re vi: 0 246 / 0 269 / +0 +23

2024-02-26T12:15:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8048674990 # 302