@@ -1,3 +1,9 @@
+2024-04-17T12:31:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8721917454 # 378
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
+* notice: query file size: 24483
+* notice: accum prev / next / diff: re vi: 0 273 / 0 275 / +0 +2
+
 2024-04-17T08:20:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718627376 # 377
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
